--- a/stream.html
+++ b/stream.html
@@ -28,12 +28,16 @@
             background-color: var(--background-color);
             color: var(--text-color);
             line-height: 1.6;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh; /* Pastikan body setidaknya setinggi viewport */
         }
 
         .container {
             width: 90%;
             max-width: 1200px;
             margin: 0 auto;
+            flex: 1; /* Biarkan container utama mengambil ruang yang tersisa */
         }
 
         a {
@@ -90,6 +94,9 @@
         /* Main Content */
         main {
             padding: 2rem 0;
+            display: flex;
+            flex-direction: column; /* Susun elemen secara vertikal */
+            gap: 2rem; /* Jarak antar elemen */
         }
 
         h2 {
@@ -100,7 +107,9 @@
         /* Video Player */
         #video-player-container {
             background-color: black;
-            height: 500px; /* Atur tinggi sesuai kebutuhan */
+            width: 100%; /* Pastikan lebar penuh */
+            /* Tinggi proporsional 16:9 */
+            aspect-ratio: 16 / 9;
             border-radius: var(--border-radius);
             overflow: hidden;
             display: flex;
@@ -121,13 +130,14 @@
             padding: 1.5rem;
             border-radius: var(--border-radius);
             box-shadow: var(--box-shadow);
-            margin-top: 2rem;
         }
 
         #episode-info h1 {
             font-size: 1.5rem;
             margin-bottom: 1rem;
             color: var(--primary-color);
+            word-wrap: break-word; /* Pecah teks jika terlalu panjang */
+            overflow-wrap: break-word;
         }
 
         /* Episode List */
@@ -136,22 +146,28 @@
             padding: 1.5rem;
             border-radius: var(--border-radius);
             box-shadow: var(--box-shadow);
-            margin-top: 2rem;
+            max-height: 300px; /* Batasi tinggi */
+            overflow-y: auto; /* Tambahkan scroll jika isi terlalu panjang */
         }
 
         #episode-list h3 {
             margin-bottom: 1rem;
             color: var(--primary-color);
+            word-wrap: break-word; /* Pecah teks jika terlalu panjang */
+            overflow-wrap: break-word;
         }
 
         #episode-list ul {
             list-style: none;
             padding: 0;
+            margin: 0; /* Hapus margin default */
         }
 
         #episode-list ul li {
             padding: 0.5rem 0;
             border-bottom: 1px solid #3c3c3c;
+            word-wrap: break-word; /* Pecah teks jika terlalu panjang */
+            overflow-wrap: break-word;
         }
 
         #episode-list ul li:last-child {
@@ -161,6 +177,9 @@
         #episode-list ul li a {
             color: var(--text-secondary);
             transition: color 0.3s ease;
+            display: block; /* Jadikan link sebagai block agar lebih mudah diklik di mobile */
+            word-wrap: break-word; /* Pecah teks jika terlalu panjang */
+            overflow-wrap: break-word;
         }
 
         #episode-list ul li a:hover {
@@ -172,7 +191,7 @@
             background-color: var(--secondary-color);
             padding: 1.5rem 0;
             text-align: center;
-            margin-top: auto;
+            margin-top: auto; /* Dorong footer ke bawah */
         }
 
         /* Media Queries untuk Responsif */
@@ -180,14 +199,30 @@
             header .container {
                 flex-direction: column;
                 gap: 1rem;
+                text-align: center; /* Pusatkan teks di mobile */
             }
 
             nav ul {
                 gap: 1rem;
+                flex-wrap: wrap; /* Bungkus link jika terlalu banyak */
+                justify-content: center; /* Pusatkan link nav */
+            }
+
+            main {
+                padding: 1rem 0; /* Kurangi padding di mobile */
             }
 
             #video-player-container {
-                height: 300px; /* Tinggi lebih kecil di mobile */
+                /* Tinggi proporsional 16:9 tetap berlaku, tetapi ukuran absolut bisa berkurang */
+                /* aspect-ratio: 16 / 9; -- Sudah ditetapkan di atas */
+            }
+
+            #episode-info h1 {
+                font-size: 1.2rem; /* Ukuran font lebih kecil di mobile */
+            }
+
+            #episode-list {
+                max-height: 200px; /* Kurangi tinggi maksimum di mobile */
             }
         }
     </style>
